tweaking travis settings for jdk8